deployments/services.yml
apiVersion: v1
kind: Service
metadata:
  name: datahive
  namespace: teol
  labels:
    app: gateway
spec:
  ports:
    - port: 3000
      targetPort: 3000
  type: NodePort
  selector:
    app: ln1
