deployments/ingresses.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datahive
  namespace: teol
spec:
  ingressClassName: "nginx"
  rules:
    - host: staging-api.datahive.p10node.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ln1
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datahive-production
  namespace: teol
spec:
  ingressClassName: "nginx"
  rules:
    - host: api.datahive.p10node.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ln1-production
                port:
                  number: 3000
